--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^5.2.1
   country_picker: ^2.0.26
   flutter_svg: ^2.0.10+1
+  flutter_screenutil: ^5.9.3
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +56,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  flutter_screenutil: ^5.9.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
