complete better user experience buyter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   intl_phone_number_input: ^0.7.4
   url_launcher: ^6.1.10
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
