--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,12 @@ dependencies:
   intl_phone_field: ^3.2.0
   intl_phone_number_input: ^0.7.4
   url_launcher: ^6.1.10
-  carousel_slider: ^4.2.1
   animate_do: ^3.3.4
   glassmorphism: ^3.0.0
   lottie: ^3.1.2
   animated_text_kit: ^4.2.2
+  photo_view: ^0.15.0
+  flutter_image_slideshow: ^0.1.6
 
 dev_dependencies:
   flutter_test:
