--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.3.0
+  firebase_core: ^2.24.2
   provider: ^6.1.2
-  firebase_auth: ^5.1.4
+  firebase_auth: ^4.16.0
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
-  firebase_storage: ^12.1.3
-  cloud_firestore: ^5.2.1
+  firebase_storage: ^11.6.0
+  cloud_firestore: ^4.14.0
   country_picker: ^2.0.26
   flutter_svg: ^2.0.10+1
   flutter_screenutil: ^5.9.3
@@ -53,6 +53,10 @@ dependencies:
   animated_text_kit: ^4.2.2
   photo_view: ^0.15.0
   flutter_image_slideshow: ^0.1.6
+  flutter_stripe: ^10.1.0
+  http: ^1.1.0
+  logging: ^1.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  very_good_analysis: ^5.1.0
+  flutter_native_splash: ^2.3.10
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
